SONAR-8951 fix some quality flaws